--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ padding: 10px 15px;
 resize: none;
 
 }
+
 .to-text::placeholder{
 color: #222;
 }
@@ -57,6 +58,9 @@ button{
     textarea{
         width: 250px;
         height: 150px;
+    }
+    textarea:focus{
+        margin-top:50px;
     }
     button{
         width: 250px;
